--- a/css/contact.css
+++ b/css/contact.css
@@ -405,7 +405,7 @@ ul {
   content: "";
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: rgba(80, 190, 233, 0.582);
   z-index: -1;
   opacity: .9;
 }
