--- a/css/home.css
+++ b/css/home.css
@@ -405,7 +405,7 @@ ul {
   content: "";
   width: 100%;
   height: 100%;
-  background-color: rgb(80, 190, 233, 0.582);
+  background-color: rgb(80, 190, 233);
   z-index: -1;
   opacity: .9;
 }
