--- a/css/style.css
+++ b/css/style.css
@@ -405,7 +405,7 @@ ul {
   content: "";
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
   z-index: -1;
   opacity: .9;
 }
